--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
   "author": "University of Maryland",
   "license": "MIT",
   "devDependencies": {
-    "dotenv": "^8.0.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "dotenv": "^8.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.30.0",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
